[package]
name = "counter-dapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter_dapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[profile.release]
overflow-checks = true
strip = "debuginfo"
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"
